--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: PIA_STATUS_HERE
+    status: not-required
     last-updated: '2021-01-14T00:39:05.867Z'
   - name: STRA
-    status: STRA_STATUS_HERE
+    status: not-required
     last-updated: '2021-01-14T00:39:05.867Z'
